# iztro-py

./: .buildinfo  .gitignore  AGENTS.md  API_COMPARISON.md  CHANGELOG.md  CLAUDE.md  COMPARISON_SUMMARY.md  CREATE_RELEASE.md  DEPLOYMENT.md  MANIFEST.in  PROJECT_COMPARISON.md  README.md  READY_TO_PUBLISH.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  TEST_REPORT.md  VERIFICATION_REPORT.md  changelog.html  check_hour.py  check_parents_palace.py  check_wu_chen.py  comprehensive_comparison.py  correct_verify.py  debug_five_elements.py  debug_stars.py  detailed_compare.py  examples.html  final_verification.py  genindex.html  index.html  installation.html  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  simple_verify.py  (+3 more)
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml  publish.yml
_modules/: index.html
_modules/iztro_py/: i18n.html
_modules/iztro_py/astro/: astro.html  functional_astrolabe.html  functional_palace.html  functional_star.html  functional_surpalaces.html  horoscope.html  palace.html
_modules/iztro_py/data/: brightness.html  constants.html  earthly_branches.html  heavenly_stems.html  types.html
_modules/iztro_py/star/: location.html  major_star.html  minor_star.html  mutagen.html
_modules/iztro_py/utils/: calendar.html  helpers.html
_sources/: changelog.rst.txt  quickstart.rst.txt
_sources/api/: index.rst.txt
api/: astro.html  data.html  i18n.html  index.html  star.html  utils.html
benchmarks/: __init__.py  performance.py
docs/: __init__.py  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  migration-guide.md  why-iztro-py.md
docs/api/: astro.rst  data.rst  i18n.rst  star.rst  utils.rst
examples/: basic_usage.py  horoscope_usage.py  i18n_usage.py  multilang_demo.py
scripts/: release.sh
src/iztro_py/: __init__.py
src/iztro_py/astro/: __init__.py  (+7 more)
tests/: __init__.py  test_api.py  test_calendar.py  test_horoscope.py  test_integration.py  test_iztro_compatibility.py  test_palace.py  test_stars.py
(+22 files in other folders)
